fixed theme spacing and added color pickup

--- a/themes.css
+++ b/themes.css
@@ -13,6 +13,7 @@ foreignObject {
 	height: 100px;
 	width: 700px;
 	padding: 10px;
+	border-radius: 5px;
 }
 
 songs {
@@ -29,6 +30,8 @@ songs {
 	width: 250px;
 	font-weight: normal;
 	float: left;
+	text-align: center;
+	border-radius: 5px;
 }
 
 .theme-item:hover {
